--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "description": "turn based hidden movement game",
   "main": "index.js",
   "dependencies": {
+    "bootstrap": "^4.3.1",
     "express": "^4.16.4",
     "socket.io": "^2.2.0"
   },
   "devDependencies": {},
   "scripts": {
-    "start":"node index.js",
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
