--- a/package.json
+++ b/package.json
@@ -3,24 +3,18 @@
   "version": "0.0.1",
   "description": "turn based hidden movement game",
   "main": "index.js",
-  "dependencies": {
-    "bootstrap": "^4.3.1",
-    "express": "^4.16.4",
-    "socket.io": "^2.2.0"
-  },
-  "devDependencies": {},
   "scripts": {
-    "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "client": "cd client && npm start",
+    "server": "cd server && npm start",
+    "start": "concurrently --kill-others \"npm run server\" \"npm run client\""
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/MichaelClingan-Siverly/sneaky-aliens.git"
-  },
+  "keywords": [],
   "author": "Michael Clingan-Siverly",
   "license": "Unlicense",
-  "bugs": {
-    "url": "https://github.com/MichaelClingan-Siverly/sneaky-aliens/issues"
+  "devDependencies": {
+    "concurrently": "^4.1.0"
   },
-  "homepage": "https://github.com/MichaelClingan-Siverly/sneaky-aliens#readme"
+  "dependencies": {
+  
+  }
 }
